fixed spacing issues in both html and css code

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,40 +1,39 @@
-/**/
 body {
-  background-color: #e9d783;
-  max-width: 1000px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+   background-color: #e9d783;
+   max-width: 1000px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 #pagetopcontent .name {
-  font-family: Helvetica;
-  font-size: 50px;
-  clear: right;
-  float: right;
-  margin-top: 0%;
-  margin-bottom: 0%;
+   font-family: Helvetica;
+   font-size: 50px;
+   clear: right;
+   float: right;
+   margin-top: 0%;
+   margin-bottom: 0%;
 }
 
 #pagetopcontent .title {
-  font-family: Helvetica;
-  font-size: 30px;
-  font-style: italic;
-  clear: right;
-  text-align: right;
+   font-family: Helvetica;
+   font-size: 30px;
+   font-style: italic;
+   clear: right;
+   text-align: right;
 }
 
 .profilepic {
-  width: 200px;
-  height: 200px;
+   width: 200px;
+   height: 200px;
 }
 
 hr {
-  width: 100%;
-  margin-bottom: 20px;
-  margin-top: 15px;
-  color: black;
-  clear: both; /*need this to have line break below profile picture in firefox*/
+   width: 100%;
+   margin-bottom: 20px;
+   margin-top: 15px;
+   color: black;
+   clear: both; /*need this to have line break below profile picture in firefox*/
 }
 
 /*Centers the width of the image on the webpage */
@@ -48,56 +47,55 @@ hr {
 }
 
 .contactsectiontitle {
-  font-family: Helvetica;
+   font-family: Helvetica;
 }
 
-/*flex wrap the contact info photo links */
+/* The below code is necessary for the gmail, linkedin, and github photos to wrap to the same line.
 
-/*justify-content: space-between; works when I inspect page, but when I refresh page images are not spaced correctly...
+justify-content: space-between; works when I inspect page, but when I refresh page images are not spaced correctly...
  visually see how flex wraps work here https://yoksel.github.io/flex-cheatsheet/ ...it should be working*/
 #pagebottomcontent {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%
-  max-width: 1000px;
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   justify-content: space-between;
+   width: 100%
+   max-width: 1000px;
 }
 
 #pagebottomcontent figure {
-  margin-inline-start: 0%;
-  margin-inline-end: 0%;
-  padding: 0%;
-  margin: 0%;
-  width: 33%;
+   margin-inline-start: 0%;
+   margin-inline-end: 0%;
+   padding: 0%;
+   margin: 0%;
+   width: 33%;
 }
 
 figcaption {
-  font-family: Helvetica;
+   font-family: Helvetica;
 }
 
 /*google image is short and wide. created this padding to have text align with other contact section text*/
 .gmail img {
-  padding-bottom: 27px;
+   padding-bottom: 27px;
 }
 
 .udacitylogo {
-  width: 150px;
-  height: 100px;
-  float: right;
+   width: 150px;
+   height: 100px;
+   float: right;
 }
 
+/*Media Query and Breakers*/
 
-/*Media Query Breakers*/
-
- @media screen and (max-width: 544px) {
+@media screen and (max-width: 544px) {
    #pagetopcontent .name {
-     font-size: 18px;
-     }
+      font-size: 18px;
+   }
 
-     #pagetopcontent .title {
-     font-size: 10px;
-     }
+    #pagetopcontent .title {
+      font-size: 10px;
+    }
 
     .profilepic {
       width: 100px;
@@ -109,36 +107,35 @@ figcaption {
       height: 40px;
     }
 
-  #pagemiddlecontent img {
-  height: 200px;
-  width: 100%;
-  }
+    #pagemiddlecontent img {
+       height: 200px;
+       width: 100%;
+    }
 
-  .contactsectiontitle {
-  font-size: 18px;
-  }
+    .contactsectiontitle {
+       font-size: 18px;
+    }
 
-  /*google image is short and wide. created this padding to have text align with other contact section text*/
-  .gmail img {
-    padding-bottom: 10px;
-  }
+    /*google image is short and wide. created this padding to have text align with other contact section text*/
+   .gmail img {
+      padding-bottom: 10px;
+   }
 
 }
 
+@media screen and (min-width: 545px) and (max-width: 768px) {
 
-  @media screen and (min-width: 545px) and (max-width: 768px) {
-
-  #pagetopcontent .name {
-    font-size: 35px;
-    }
+   #pagetopcontent .name {
+      font-size: 35px;
+   }
 
     #pagetopcontent .title {
-    font-size: 20px;
+       font-size: 20px;
     }
 
     .profilepic {
-      width: 150px;
-      height: 150px;
+       width: 150px;
+       height: 150px;
     }
 
     .udacitylogo {
@@ -147,32 +144,17 @@ figcaption {
     }
 
    #pagemiddlecontent img {
-   height: 300px;
-  width: 100%;
-  }
+      height: 300px;
+      width: 100%;
+   }
 
-.contactsectiontitle {
-font-size: 35px;
+   .contactsectiontitle {
+      font-size: 35px;
+   }
+
+   /*google image is short and wide. created this padding to have text align with other contact section text*/
+   .gmail img {
+      padding-bottom: 18px;
+   }
+
 }
-
-/*google image is short and wide. created this padding to have text align with other contact section text*/
-.gmail img {
-  padding-bottom: 18px;
-}
-
-}
-
-
-/*
-figure {
-  align-items: center;
-}
-*/
-
-/*.contactphotosinstagram,.contactphotoslinkedin,.contactphotosgithub,.contactphotosgmail {
-  margin-inline-start: 0%;
-  margin-inline-end: 0%;
-}*/
-
-
-/*add thickness and max width for <hr> ex. <hr size="30">  hr{width:50%;margin:0 auto;}*/
